simplify onSave and show toast

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4"
   },
